@@ -1,2 +1,7 @@
-/* Define to 1 if LibRaw use OpenMP shared library to perform parallel demosaicing */
-#cmakedefine ENABLE_OPENMP 1
+#ifndef LIBRAW_CONFIG_H
+#define LIBRAW_CONFIG_H
+
+/* Define to 1 if LibRaw don't use OpenMP shared library to perform parallel demosaicing */
+#cmakedefine DISABLE_OPENMP 1
+
+#endif /* LIBRAW_CONFIG_H */
